Rebrand: fbvpdf → cbvpdf
- Rename fbvpdf.app to cbvpdf.app
- Rename binary fbvpdf to cbvpdf
- Update all build scripts (makemacos.sh, makelinux.sh, makecrosswin.sh, make-macos-bundle.sh)
- Update source references in platform/gl/gl-main.c
- Update Info.plist files
- Update README and README.md

--- a/Info.plist
+++ b/Info.plist
@@ -5,11 +5,11 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>English</string>
 	<key>CFBundleExecutable</key>
-	<string>fbvpdf</string>
+	<string>cbvpdf</string>
 	<key>CFBundleGetInfoString</key>
 	<string></string>
 	<key>CFBundleIconFile</key>
-	<string>fbvpdf</string>
+	<string>cbvpdf</string>
 	<key>CFBundleIdentifier</key>
 	<string></string>
 	<key>CFBundleInfoDictionaryVersion</key>
