--- a/cbvpdf.app/Contents/Info.plist
+++ b/cbvpdf.app/Contents/Info.plist
@@ -5,11 +5,11 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>English</string>
 	<key>CFBundleExecutable</key>
-	<string>fbvpdf</string>
+	<string>cbvpdf</string>
 	<key>CFBundleGetInfoString</key>
 	<string></string>
 	<key>CFBundleIconFile</key>
-	<string>fbvpdf</string>
+	<string>cbvpdf</string>
 	<key>CFBundleIdentifier</key>
 	<string></string>
 	<key>CFBundleInfoDictionaryVersion</key>
