Add ZeroMQ-based DDI protocol for BV-BP communication
- Add ZMQ detection to Makerules (via pkg-config)
- Add ZMQ_CFLAGS and ZMQ_LIBS to Makefile.macos
- Add ZMQ support to ddi.h/c with DDI_set_zmq_endpoint(), DDI_zmq_init()
- Update gl-main.c with -Z flag for ZMQ endpoint
- Fallback to file-based DDI if ZMQ unavailable

--- a/Makefile.macos
+++ b/Makefile.macos
@@ -33,6 +33,7 @@ LIBS += $(LURATECH_LIBS)
 LIBS += $(MUJS_LIBS)
 LIBS += $(OPENJPEG_LIBS)
 LIBS += $(ZLIB_LIBS)
+LIBS += $(SYS_ZMQ_LIBS)
 
 CFLAGS += $(FREETYPE_CFLAGS)
 CFLAGS += $(HARFBUZZ_CFLAGS)
@@ -45,6 +46,7 @@ CFLAGS += $(LURATECH_CFLAGS)
 CFLAGS += $(MUJS_CFLAGS)
 CFLAGS += $(OPENJPEG_CFLAGS)
 CFLAGS += $(ZLIB_CFLAGS)
+CFLAGS += $(SYS_ZMQ_CFLAGS)
 
 ALL_DIR := $(OUT)/generated
 ALL_DIR += $(OUT)/scripts
